# dashboard-template

./: LICENSE
api/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: e5fd533abdf8_create_users_table.py
api/migrations/: env.py
api/migrations/versions/: a1749dfb2096_create_users_table.py  ab737279a59e_create_user_table.py
api/src/: main.py
api/src/configs/: database.py  settings.py
api/src/models/: __init__.py  user_model.py
api/src/providers/: security.py
api/src/repository/: user_repository.py
api/src/routes/: __init__.py  user_routes.py
api/src/schemas/: user_schema.py
api/src/services/: user_service.py
app/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.vue  main.ts
app/src/router/: index.ts
app/src/views/: DashBoard.vue
app/src/views/accounts/: Login.vue  Register.vue
