[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Anderson Foschiera <foschieraanderson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
asyncmy = "^0.2.9"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
